Extend api with newly created relationships
