# backend/src/main/java/at/uibk/dps/rm/handler/resource/PlatformHandler.java
@@ -1,0 +1,19 @@
+package at.uibk.dps.rm.handler.resource;
+
+import at.uibk.dps.rm.handler.ValidationHandler;
+
+/**
+ * Processes the http requests that concern the platform entity.
+ *
+ * @author matthi-g
+ */
+public class PlatformHandler extends ValidationHandler {
+    /**
+     * Create an instance from the platformChecker.
+     *
+     * @param platformChecker the platform checker
+     */
+    public PlatformHandler(PlatformChecker platformChecker) {
+        super(platformChecker);
+    }
+}
