# backend/src/main/resources/openapi/resource-manager.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  version: "1.0.1"
+  version: "1.0.3"
   title: "Resource Manager"
   description: |
     This is the API specification for the Apollo Resource Manager. The api provides various routes to 
@@ -150,6 +150,7 @@ tags:
   - name: functions
   - name: logs
   - name: metrics
+  - name: platforms
   - name: regions
   - name: reservations
   - name: resourceTypes
@@ -380,6 +381,8 @@ paths:
               type: object
               required:
                 - resource_type
+                - region
+                - platform
               additionalProperties: false
               properties:
                 resource_type:
@@ -392,10 +395,6 @@ paths:
                       type: integer
                       format: int64
                       example: 1
-                is_self_managed:
-                  description: this property does not have any influence at the moment
-                  type: boolean
-                  example: false
                 region:
                   type: object
                   required:
@@ -403,6 +402,16 @@ paths:
                   additionalProperties: false
                   properties:
                     region_id:
+                      type: integer
+                      format: int64
+                      example: 1
+                platform:
+                  type: object
+                  required:
+                    - platform_id
+                  additionalProperties: false
+                  properties:
+                    platform_id:
                       type: integer
                       format: int64
                       example: 1
@@ -2210,6 +2219,26 @@ paths:
         500:
           $ref: "#/components/responses/500"
 
+  /platforms:
+    get:
+      description: Return details about all platforms available for resource deployments
+      operationId: listPlatforms
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - platforms
+      responses:
+        200:
+          description: Successful pull of all platforms
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Platform"
+        500:
+          $ref: "#/components/responses/500"
+
 components:
   schemas:
     Account:
@@ -2234,11 +2263,34 @@ components:
           example: 1
         provider:
           type: string
+          enum:
+            - aws
+            - custom-cloud
+            - custom-edge
           example: aws
+        environment:
+          $ref: "#/components/schemas/Environment"
         created_at:
           type: integer
           format: int64
           example: 1679496667103
+    Environment:
+      type: object
+      properties:
+        environment_id:
+          type: integer
+          format: int64
+          example: 1
+        environment:
+          type: string
+          enum:
+            - cloud
+            - edge
+        created_at:
+          type: integer
+          format: int64
+          example: 1679496667103
+
     Region:
       type: object
       properties:
@@ -2269,6 +2321,8 @@ components:
           example: true
         region:
           $ref: "#/components/schemas/Region"
+        platform:
+          $ref: "#/components/schemas/Platform"
         created_at:
           type: integer
           format: int64
@@ -2312,6 +2366,9 @@ components:
         resource_type:
           type: string
           maxLength: 8
+          enum:
+            - faas
+            - container
           example: faas
         created_at:
           type: integer
@@ -2390,6 +2447,18 @@ components:
           type: integer
           format: int64
           example: 1
+        name:
+          type: string
+          example: foo1
+        code:
+          type: string
+          example: |
+            def main(json_input):
+              input1 = json_input["input1"]
+              res = {
+                  "input1": input1
+              }
+              return res
         runtime:
           $ref: "#/components/schemas/Runtime"
         created_at:
@@ -2405,8 +2474,10 @@ components:
           example: 1
         name:
           type: string
+          example: python38
         template_path:
           type: string
+          example: ./templates/python38
         created_at:
           type: integer
           format: int64
@@ -2457,6 +2528,10 @@ components:
           example: 1
         name:
           type: string
+          enum:
+            - NodePort
+            - LoadBalancer
+            - NoService
           example: NodePort
         created_at:
           type: integer
@@ -2563,6 +2638,27 @@ components:
               - $ref: '#/components/schemas/stringValues'
               - $ref: '#/components/schemas/numberValues'
               - $ref: '#/components/schemas/boolValues'
+    Platform:
+      type: object
+      properties:
+        platform_id:
+          type: integer
+          format: int64
+          example: 1
+        platform:
+          type: string
+          enum:
+            - lambda
+            - ec2
+            - openfaas
+            - k8s
+          example: lambda
+        resource_type:
+          $ref: '#/components/schemas/ResourceType'
+        created_at:
+          type: integer
+          format: int64
+          example: 1679496667103
 
   parameters:
     idParam:
